# morpc-census

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
doc/: 01-morpc-geos-demo.ipynb  04-morpc-cesnsus-minimum.ipynb  api-reference.md  index.md
morpc_census/: __init__.py  acs_dims.json  acs_group_dims.json  api.py  dec_dim_names.json  dec_dims.json  dec_group_dims.json  dim_names.json  dims.json  geos.py  tigerweb.py
reference/: dev_notes.md
scripts/: acs_variable_groups.json  add_universe.py  build_dec_dimension_sets.py  build_dec_dims.py  build_dimension_sets.py  build_dims.py  dec_dimension_sets.json  dec_group_variable_sets.json  dec_variable_groups.json  dim_namer.py  dim_network.html  dim_network.py  dim_similarity.csv  dim_similarity.py  fetch_dec_variable_groups.py  fix_dec_dim_names.py  group_variable_sets.json  name_dec_dimension_sets.py  name_dimension_sets.py
tests/: test_api.py  test_smoke.py
