[project]
name = "morpc-census"
dynamic = ["version"]
description = "Census data tools used by MORPC"
authors = [
    {name = "MORPC data team", email = "dataandmaps@morpc.org"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = [
    "morpc>=0.5.4",
    "numpy>=1.24",
    "pandas>=2.0",
    "geopandas>=0.14",
    "frictionless>=5.0",
    "requests>=2.28",
    "shapely>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not network'"
markers = [
    "network: mark test as requiring live network access (skipped by default)",
]

[tool.setuptools.packages.find]
exclude = ["demo"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.json", "py.typed"]
